# Algo-Harjoitustyo

./: README.md  pyproject.toml
dokumentaatio/: Kayttoohje.md  Koodin toiminnan selitys ja käyttöohje.md  Testausdokumentti.md  Toteutusdokumentti.md  ohje.md
dokumentaatio/Viikkoraportit/: Viikkoraportti_1.md  Viikkoraportti_2.md  Viikkoraportti_3.md  Viikkoraportti_4.md  Viikkoraportti_5.md  Viikkoraportti_6.md
src/: app.py  connect.py  minmax.py
src/tests/: connect_test.py  minmax_test.py
